force-app/main/default/objects/User.object
<CustomObject>
    <fields>
        <fullName>ASURITE_Id__c</fullName>
        <description>[??] - ASURITE ID</description>
        <formula>Contact.ASURite_ID__c</formula>
        <label>ASURITE Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASURITE_for_External_ID__c</fullName>
        <description>[??] - This User's ASURITE. If different from the Federation ID, it will be set that that value via workflow. Used for Upserting User records. Any Upsert should map the ASURITE to this field as the "External ID", and ALSO map the ASURITE to the Federation ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>This User's ASURITE. If different from the Federation ID, it will be set that that value via workflow. Used for Upserting User records. Any Upsert should map the ASURITE to this field as the "External ID", and ALSO map the ASURITE to the Federation ID.</inlineHelpText>
        <label>ASURITE for External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Admin_Notes__c</fullName>
        <description>User object field for capturing notes and collaboration by the ASU Admins, regarding said user account.</description>
        <label>Admin Notes</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <description>[??] - First Name</description>
        <formula>Contact.FirstName</formula>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <description>[??] - last name</description>
        <formula>Contact.LastName</formula>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmplId__c</fullName>
        <description>[PeopleSoft] - EMPLID</description>
        <formula>Contact.EMPLID__c</formula>
        <label>EMPLID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC_Business_Unit_User__c</fullName>
        <description>These are MC Business Units the user can interact with for the subscription center.</description>
        <inlineHelpText>These are MC Business Units the user can interact with for the subscription center.</inlineHelpText>
        <label>(DO NOT USE) MC Business Unit User</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marketing_Cloud_Business_Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receive_Apex_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the error logger to determine who should receive backup emails.</description>
        <inlineHelpText>Used by the error logger to determine who should receive backup emails.</inlineHelpText>
        <label>Receive Apex Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruiter_Email__c</fullName>
        <description>[??] - Recruiter Email</description>
        <label>Recruiter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Recruiter_Full_Name__c</fullName>
        <description>[??] - Full name of Recruiter</description>
        <label>Recruiter Full Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruiter_Phone__c</fullName>
        <description>[??] - Recruiter phone</description>
        <label>Recruiter Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Recruiter_Title__c</fullName>
        <description>[??] - Recruiter Title</description>
        <label>Recruiter Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Academic_Advisor_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates user has access to Academic Advisor Portal. PeopleSoft security role = ASU_FC_SF AP Advisor Portal</description>
        <inlineHelpText>Indicates user has access to Academic Advisor Portal. Users will be assigned the permission set Role: Academic Advisor Portal (Service Users).</inlineHelpText>
        <label>Academic Advisor Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Administrator_Developer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PeopleSoft security role = ASU_FC_SF AD Admin and Develop</description>
        <inlineHelpText>This is a hidden PeopleSoft security role (role name: ASU_FC_SF AD Admin and Develop). Only given to Salesforce Administrators.</inlineHelpText>
        <label>Administrator / Developer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Case_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PeopleSoft security role = ASU_FC_SF MG Case Management</description>
        <inlineHelpText>Users will receive the ASU Service profile for their department. Service Cloud User checkbox needs to be checked.</inlineHelpText>
        <label>Case Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PeopleSoft security role = ASU_FC_SF CH Salesforce Chat</description>
        <inlineHelpText>Users will receive the ASU Chatter profile.</inlineHelpText>
        <label>Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Connected_MC_Adm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is associated to the PeopleSoft security request for 'Connected Marketing Cloud Adm' described as " 	Admin access in a business unit in Marketing Cloud that is connected to Enterprise Salesforce." (ASU_FC_MC BA Connected MC Adm).</description>
        <inlineHelpText>This user has been approved to have access in the Connected Marketing Cloud instance as a business unit administrator. This MC instance is connected to Salesforce through Data Stream.</inlineHelpText>
        <label>Connected Marketing Cloud Adm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Connected_MC_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is associated to the PeopleSoft security request for 'Connected Marketing Cloud User' described as "Basic user access in a business unit in Marketing Cloud that is connected to Enterprise Salesforce." (ASU_FC_MC BU Connected MC User).</description>
        <inlineHelpText>This user has been approved to have access in the Connected Marketing Cloud instance as a regular user. This MC instance is connected to Salesforce through Data Stream.</inlineHelpText>
        <label>Connected Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Corporate_Relations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PeopleSoft security role = ASU_FC_SF CR Corporate</description>
        <inlineHelpText>Users will receive the ASU Corporate Relations profile or the Corporate Relations permission set if they have a Service or Recruiting profile. Marketing User checkbox will need to be checked and the user added to the Corporate Relations public group.</inlineHelpText>
        <label>Corporate Relations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_EdPlus_Coach_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates user has access to the EdPlus Coach Portal. PeopleSoft security role = ASU_FC_SF CP Coach Portal</description>
        <inlineHelpText>Indicates user has access to the EdPlus Coach Portal. Users will be assigned the ASU Success Coach profile.</inlineHelpText>
        <label>EdPlus Coach Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Export_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PeopleSoft security role = ASU_FC_SF RP Export Reports</description>
        <inlineHelpText>Users will receive the Export Reports permission set.</inlineHelpText>
        <label>Export Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Knowledge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PeopleSoft security role = ASU_FC_SF KB Knowledge User</description>
        <inlineHelpText>User also needs Knowledge license checkbox, permission set Knowledge Editor (if not a Service profile) and public group (for content approver) or queue (for format approver).</inlineHelpText>
        <label>Knowledge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Marketing_Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is associated to the PeopleSoft security request for 'Salesforce Marketing Cloud' described as "Access to ExactTarget Marketing Cloud". (ASU_FC_SF MK Marketing Cloud). The user will be automatically added to the ASU Marketing Cloud chatter group.</description>
        <inlineHelpText>This user has been approved to have access in the Unconnected Marketing Cloud instance (also known as the legacy instance). This MC instance is not connected to Salesforce. Access only to the ASU Marketing Cloud chatter group in Salesforce.</inlineHelpText>
        <label>Unconnected Marketing Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Quick_Text_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User object field for capturing users that have an approved and completed PeopleSoft Role for Quick Text Manager.</description>
        <inlineHelpText>Check this box when a user is granted Quick Text Manager.  Note, even though this field is in this "Salesforce PeopleSoft Roles" section, there is no PeopleSoft role for this.  Access is provided by granting the "Quick Text Manager" permission set.</inlineHelpText>
        <label>Quick Text Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Recruiting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User object field for capturing users that have an approved and completed PeopleSoft Role for Recruitment. PeopleSoft security role = ASU_FC_SF RC Recruiting</description>
        <inlineHelpText>Users could be either part of Admissions Services (with corresponding ASU Recruitment profile) or part of a College (with corresponding ASU Service profile). Marketing User checkbox will need to be checked.</inlineHelpText>
        <label>Recruiting (Case + Recruitment)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Recruitment_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PeopleSoft security role = ASU_FC_SF CO Recruit Comm</description>
        <inlineHelpText>Users will receive the ASU Marketing User profile for this role.</inlineHelpText>
        <label>Recruitment Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Recruitment_Graduate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(DO NOT USE) Recruitment Graduate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Recruitment_Undergraduate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(DO NOT USE) Recruitment Undergraduate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Standard_Student_Pages__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users are approved with the PeopleSoft role SR Standard Student Pages View This role provides faculty and staff with view access to student information. This information includes name and address data in Campus Community, student records data in the Student Services Center, the ability to print an unofficial transcript and the ability to view holds on the student's record. This is the basic, default role for access to student records. ASU_SA_SR Standard Stdnt Pages</description>
        <inlineHelpText>Users are approved to view the Student Profile page. Add Permission Set = Student Profile: View External Objects to the User record.</inlineHelpText>
        <label>(DO NOT USE) Standard Student Pages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_Student_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PeopleSoft security role = ASU_FC_SF SP Student Profile</description>
        <inlineHelpText>Permission Set = Student Profile: View External Objects</inlineHelpText>
        <label>Student Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_View_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PeopleSoft security role = ASU_FC_SF AD View Only</description>
        <inlineHelpText>Users will receive the ASU Read Only profile for this role.</inlineHelpText>
        <label>View Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role_inContact_User_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For users in the Help Desk and EdPlus who need to use the integrated phone application. Data Trustees are Michael Lund (mlund4), Chris Tyler (ctyler), Brandon Tolbert (btolber2), Brian Frost (bjfrost). PS security role = ASU_FC_SF IC Salesforce inCont</description>
        <inlineHelpText>Add Call Center on User account. Add license by navigating to Setup | Build | Installed Packaged | InContact Agent Console | Manage Licenses.</inlineHelpText>
        <label>inContact User License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sandbox_DEV__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>In DEV, set UTO team as admin, Recruitment with Leads profile, with specific users as delegated admin.</inlineHelpText>
        <label>DEV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sandbox_Delagated_Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if user has a corresponding Delegated Administrator permission set in a sandbox.</description>
        <inlineHelpText>Indicates if user has a corresponding Delegated Administrator permission set in a sandbox.</inlineHelpText>
        <label>Delagated Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sandbox_QA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>In QA, set UTO team as admin, Recruitment with Leads profile, with specific users as delegated admin. Add QA team to QA profile.</inlineHelpText>
        <label>QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sandbox_UAT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>In UAT, set UTO team as admin, Trainers as delegated admin, Reporting team as admin.</inlineHelpText>
        <label>UAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_Edit_Login__c</fullName>
        <description>[??] - Can be used in Reports to give an admin the ability to View, Edit or Login as the User.</description>
        <formula>HYPERLINK("https://asu.my.salesforce.com/"&amp;Id&amp;"?noredirect=1","View","_blank")
&amp;"  |  "&amp;
HYPERLINK("https://asu.my.salesforce.com/"&amp;Id&amp;"/e?retURL=%2F"&amp;Id&amp;"%3Fnoredirect%3D1?noredirect=1","Edit","_blank")
&amp;"  |  "&amp;
HYPERLINK("https://asu.my.salesforce.com/servlet/servlet.su?oid=00Dd0000000hLoc&amp;suorgadminid="&amp;Id&amp;"&amp;retURL=%"&amp;Id&amp;"%3Fnoredirect%3D1&amp;targetURL=%2Fhome%2Fhome.jsp","Login","_blank")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Can be used in Reports to give an admin the ability to View, Edit or Login as the User.</inlineHelpText>
        <label>View  |  Edit  |  Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asu_user_type__c</fullName>
        <description>Referenced in the Search User VF page and within the test code testNoSOSLResults and testUListResults</description>
        <label>(DO NOT USE) ASU User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>App ID</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Knowledge</fullName>
                </value>
                <value>
                    <fullName>Knowledge/Marketing</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Service/Knowledge</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bomgar__Bomgar_Username__c</fullName>
        <label>Bomgar Username</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>Default MID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__incCustomScreenpop__c</fullName>
        <description>Value of this field to be updated from inContact Agent Console app, use this field to get the value of inContact script variables.</description>
        <label>inContact Custom Screenpop</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveAgentName__c</fullName>
        <description>Display Name for Live Agent</description>
        <label>LiveAgentName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deprovision_User__c</fullName>
        <businessOwnerGroup>Data_Owner_IAM_Identity_Management</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Start off the de-provisioning process.  Notes from this process will be put in the user's Processing_Notes__c field.</description>
        <inlineHelpText>Check this field to trigger the deprovision process on this user account.</inlineHelpText>
        <label>Deprovision User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processing_Notes__c</fullName>
        <businessOwnerGroup>Data_Owner_IAM_Identity_Management</businessOwnerGroup>
        <description>Notes about the deprovision process - steps taken and errors encountered.</description>
        <inlineHelpText>Notes from the deprovision process that is triggered by checking the checkbox Deprovision_User__c.</inlineHelpText>
        <label>Processing Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>ASU_Recruitment_Users_with_Manager_Role</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>ASU Recruitment</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Manager</value>
        </filters>
        <label>Role: Manager Recruitment</label>
    </listViews>
    <listViews>
        <fullName>ASU_Service_Users_with_Manager_Role</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>ASU Service</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Manager</value>
        </filters>
        <label>Role: Manager Service</label>
    </listViews>
    <listViews>
        <fullName>ASU_Success_Coaches</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Coach</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>notContain</operation>
            <value>community</value>
        </filters>
        <label>Profile: ASU Success Coaches</label>
        <sharedTo>
            <group>UTO_Administration</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ActiveAPIs</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.ADDRESS_STREET</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>API</value>
        </filters>
        <label>Active APIs</label>
    </listViews>
    <listViews>
        <fullName>ActiveAdmins</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>chatter</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator,System Admin (PW Not Expired)</value>
        </filters>
        <label>Profile: System Admin</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>chatter</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>notContain</operation>
            <value>community</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsersNoAdmins</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>chatter</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>System Administrator,System Admin (PW Not Expired)</value>
        </filters>
        <label>Active Users (No Admins)</label>
    </listViews>
    <listViews>
        <fullName>Active_APIs_DEV_Email</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.ADDRESS_STREET</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>equals</operation>
            <value>salesforce.development@asu.edu</value>
        </filters>
        <label>Active APIs - DEV Email</label>
    </listViews>
    <listViews>
        <fullName>Active_Users_No_Admins_or_Community</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>chatter</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>System Administrator,System Admin (PW Not Expired)</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>ASU Community</value>
        </filters>
        <label>Active Users (No Admins or Community)</label>
    </listViews>
    <listViews>
        <fullName>Admin_User_Deprovisioning</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>Admin_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Z Deprovision</value>
        </filters>
        <label>Admin | User Deprovisioning</label>
        <sharedTo>
            <group>Identity_Management_Case</group>
            <group>UTO_Administration</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Admin_User_Provisioning_Chatter_Only</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>Admin_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Z Unassigned</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>ASU Chatter User</value>
        </filters>
        <filters>
            <field>CREATED_BY_ALIAS</field>
            <operation>equals</operation>
            <value>dbamp</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notContain</operation>
            <value>duplicate</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin | User Provisioning</label>
        <sharedTo>
            <group>Identity_Management_Case</group>
            <group>UTO_Administration</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers_nochatter</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>Chatter</value>
        </filters>
        <label>All Users (No Chatter)</label>
    </listViews>
    <listViews>
        <fullName>All_Users_No_Admins_or_Community</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>chatter</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>System Administrator,System Admin (PW Not Expired)</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>ASU Community</value>
        </filters>
        <label>All Users (No Admins or Community)</label>
    </listViews>
</CustomObject>